FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义下载任务的句柄
//Define downloader handle
typedef LONG *HDownloader;
//定义读取Torrent文件的句柄
//Define Torrent file handle
typedef LONG *HTorrentFile;
//////////////////////////////////////////////////////////////////////////

struct _tagPeerData
{
    DWORD m_dwIP;
    USHORT m_nPort;
    BYTE m_pPeerID[ IDSIZE ];
	
    //-------------------------------------
	
    BYTE m_bIsLocal;
    char m_szVersion[ AGENTSIZE ];
    QWORD m_qwPeerHaveSize;
    float m_fDownRate;
    float m_fUpRate;
    QWORD m_qwDownloaded;
    QWORD m_qwUploaded;
    float m_fTimeElapsed;
    float m_fPeerDownRate;
    char m_szExtInfo[ 256 ];
};
struct _tagMiniPeerData
{
    DWORD	m_dwIP;
    USHORT	m_nPort;
};
struct _tagAnnounceData
{
    char m_szURL[ 512 ];
    BYTE m_bWorking;
    BYTE m_bHeader;
    UINT m_nCount;
    UINT m_nFailed;
    float m_fTimeLeft;
    float m_fLastTime;
    char m_szExtInfo[ 512 ];
};
struct _tagFileInfo
{
    char m_szFileName[ 512 ];
    QWORD m_qwFileSize;
};
struct _tagErrInfo
{
    char m_szErrInfo[ 1024 ];
};
	
	//获取已经分配空间的大小
	//Get the size of allocated file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetAllocSpaceSize( HDownloader hDownloader );
	
	//获取当前的健康率
	//Get healthy rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetHealthRate( HDownloader hDownloader );
	
	//获取当前的最大缓存大小
	//Get the size of max cache
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetMaxCacheSize( HDownloader hDownloader );
	
	//获取已经使用的缓存大小
	//Get the size of used cache
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetUseCacheSize( HDownloader hDownloader );
	
	//获取本次写硬盘的总的次数
	//Get writed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetWriteDiskCount( HDownloader hDownloader );
	
	//获取本次真正写硬盘的次数
	//Get really writed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetRealWriteDiskCount( HDownloader hDownloader );
	
	//获取本次读硬盘的总的次数
	//Get readed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetReadDiskCount( HDownloader hDownloader );
	
	//获取本次真正读硬盘的次数
	//Get really readed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetRealReadDiskCount( HDownloader hDownloader );
	
	//获取写硬盘的频率(次/秒)
	//Get writing disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetWriteDiskFrenq( HDownloader hDownloader );
	
	//获取真正写硬盘的频率(次/秒)
	//Get really writing disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRealWriteDiskFrenq( HDownloader hDownloader );
	
	//获取读硬盘的频率(次/秒)
	//Get reading disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetReadDiskFrenq( HDownloader hDownloader );
	
	//获取真正读硬盘的频率(次/秒)
	//Get really reading disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRealReadDiskFrenq( HDownloader hDownloader );
	
	//获取当前日志文件的路径+名称
	//Get log file name
	FTKERNELAPI_API void BTAPI FTK_Stat_GetLogPathFileName( HDownloader hDownloader, char *lpszFileName );
	
	//获取指定的文件的进度
	//Get the progress of a file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetFileHaveSize( HDownloader hDownloader, int nIndex );
	
	//获取当前用户状态信息的列表
	//Get the peers information
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPeerData( HDownloader hDownloader, _tagPeerData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前部分用户状态信息的列表
	//Get the some peers information
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPeerRangeData( HDownloader hDownloader, _tagPeerData *pData, int nFrom, int nTo, int &nRetCount, int nMaxCount, BOOL bExtInfo = FALSE );
	
	//获取当前用户状态信息的列表(只获取IP和端口)
	//Get the peers information(only IP and port)
	FTKERNELAPI_API void BTAPI FTK_Stat_GetMiniPeerData( HDownloader hDownloader, _tagMiniPeerData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前Announce状态信息的列表
	//Get the status of announces
	FTKERNELAPI_API void BTAPI FTK_Stat_GetAnnounceData( HDownloader hDownloader, _tagAnnounceData *pData, int &nRetCount, int nMaxCount );
	
	//获取当前任务的调试信息
	//Get the debug information of downloader
	FTKERNELAPI_API const char * BTAPI FTK_Stat_GetBTDownloaderInfo( HDownloader hDownloader );
	
	//////////////////////////////////////////////////////////////////////////
	//打开Torrent文件获取信息的函数列表
	//Torrent file interface
	
	//判断是不是自己定义的加密的Torrent文件
	//Return boolean, tell us is a cipher torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsCipherTorrent( const char * lpszFileName );
	
	//执行从文件中读取数据并初始化对象操作
	//Open a torrent file handle
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_Open( const char * lpszFileName, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE );
	
	//执行从文件中读取数据并初始化对象操作, 如果失败, 返回错误信息
	//Open a torrent file handle, if failed, return error information
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_SafeOpen( const char * lpszFileName, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE, _tagErrInfo *pErrInfo = NULL );
	
	//判断是不是自己定义的加密的Torrent数据流对象
	//Return boolean, tell us is a cipher torrent binary data
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsCipherTorrentObj( const BYTE *pData, int nLength );
	
	//执行从Torrent binary object中读取数据并初始化对象操作
	//Open a torrent binary object
	FTKERNELAPI_API HTorrentFile BTAPI FTK_Torrent_OpenObj( const BYTE *pData, int nLength, UINT nCodePage = CP_ACP, const char * lpszDesKey = NULL, BOOL bValidEOF = TRUE, BOOL bValidSort = TRUE, _tagErrInfo *pErrInfo = NULL );
	
	//关闭当前打开的Torrent文件
	//Close Torrent file handle
	FTKERNELAPI_API void BTAPI FTK_Torrent_Close( HTorrentFile hTorrentFile );
	
	//判断是目录还是文件
	//Return boolean, tell us is only a single file in torrent
	FTKERNELAPI_API BOOL BTAPI FTK_Torrent_IsFile( HTorrentFile hTorrentFile );
	
	//获取 Torrent 名称
	//Get the name of torrent file
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetTorrentName( HTorrentFile hTorrentFile );
	
	//获取torrent中的文件的个数(至少一个)
	//Get total number of files
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetFilesCount( HTorrentFile hTorrentFile );
	
	//获取torrent中的文件列表(至少一个)
	//Get a pointer to file list
	FTKERNELAPI_API void BTAPI FTK_Torrent_GetFiles( HTorrentFile hTorrentFile, _tagFileInfo *pFileInfo );
	
	//获取torrent中的文件列表中的某个文件的信息
	//Get a pointer to a file of file list
	FTKERNELAPI_API void BTAPI FTK_Torrent_GetFileInfo( HTorrentFile hTorrentFile, int nIndex, _tagFileInfo *pFileInfo );
	//获取Info的Hash值, 内部使用
	//Get the binary info hash of torrent file
	FTKERNELAPI_API const BYTE * BTAPI FTK_Torrent_GetInfoHash( HTorrentFile hTorrentFile );
	
	//获取info的Hash值, 十六进制
	//Get the hex encoding info hash of torrent file
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetHexInfoHash( HTorrentFile hTorrentFile );
	
	//获取 main annouce url
	//Get mainb announce url
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetMainAnnounce( HTorrentFile hTorrentFile );
	
	//获取 Announce 分组的个数
	//Get the number of all announce list
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetAnnouncesCount( HTorrentFile hTorrentFile );
	
	//获取指定的 Announce 分组包含的Announce的个数
	//Get the size of a announce list
	FTKERNELAPI_API int BTAPI FTK_Torrent_GetAnnounceSize( HTorrentFile hTorrentFile, int nGroupIndex );
	
	//获取指定的 Announce 分组中指定位置的Announce
	//Get a annoucne of a announce list
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetAnnouncesVal( HTorrentFile hTorrentFile, int nGroupIndex, int nIndex );
	
	//获取 注释
	//Get the comments
	FTKERNELAPI_API const char * BTAPI FTK_Torrent_GetComments( HTorrentFile hTorrentFile );
	
	//获取 Torrent 创建时间
	//Get the creation time of torrent file
	FTKERNELAPI_API time_t BTAPI FTK_Torrent_GetCreateTime( HTorrentFile hTorrentFile );