FTKernelAPI_SDK/CSharpDemo/FTKernelAPI.cs


		//获取已经分配空间的大小
		//Get the size of allocated file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetAllocSpaceSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetAllocSpaceSize( uint hDownloader );
	
		//获取当前的健康率
		//Get healthy rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetHealthRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Stat_GetHealthRate( uint hDownloader );
	
		//获取当前的最大缓存大小
		//Get the size of max cache
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetMaxCacheSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetMaxCacheSize( uint hDownloader );
	
		//获取已经使用的缓存大小
		//Get the size of used cache
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetUseCacheSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Stat_GetUseCacheSize( uint hDownloader );
	
		//获取本次写硬盘的总的次数
		//Get writed disk count
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetWriteDiskCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetWriteDiskCount( uint hDownloader );
	
		//获取本次真正写硬盘的次数
		//Get really writed disk count
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetRealWriteDiskCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetRealWriteDiskCount( uint hDownloader );
	
		//获取本次读硬盘的总的次数
		//Get readed disk count
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetReadDiskCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetReadDiskCount( uint hDownloader );
	
		//获取本次真正读硬盘的次数
		//Get really readed disk count
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetRealReadDiskCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetRealReadDiskCount( uint hDownloader );
	
		//获取写硬盘的频率(次/秒)
		//Get writing disk frenqence(number/second)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetWriteDiskFrenq", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Stat_GetWriteDiskFrenq( uint hDownloader );
	
		//获取真正写硬盘的频率(次/秒)
		//Get really writing disk frenqence(number/second)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetRealWriteDiskFrenq", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Stat_GetRealWriteDiskFrenq( uint hDownloader );
	
		//获取读硬盘的频率(次/秒)
		//Get reading disk frenqence(number/second)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetReadDiskFrenq", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Stat_GetReadDiskFrenq( uint hDownloader );
	
		//获取真正读硬盘的频率(次/秒)
		//Get really reading disk frenqence(number/second)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetRealReadDiskFrenq", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_Stat_GetRealReadDiskFrenq( uint hDownloader );
	
		//获取当前日志文件的路径+名称
		//Get log file name
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetLogPathFileName", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetLogPathFileName( uint hDownloader, string sFileName );
	
		//获取指定的文件的进度
		//Get the progress of a file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetFileHaveSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern ulong FTK_Stat_GetFileHaveSize( uint hDownloader, int nIndex );
	
		//获取当前用户状态信息的列表
		//Get the peers information
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetPeerData", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetPeerData( uint hDownloader, IntPtr pData, ref int nRetCount, int nMaxCount );
	
		//获取当前部分用户状态信息的列表
		//Get the some peers information
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetPeerRangeData", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetPeerRangeData( uint hDownloader, IntPtr pData, int nFrom, int nTo, ref int nRetCount, int nMaxCount, bool bExtInfo );
	
		//获取当前用户状态信息的列表(只获取IP和端口)
		//Get the peers information(only IP and port)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetMiniPeerData", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetMiniPeerData( uint hDownloader, IntPtr pData, ref int nRetCount, int nMaxCount );
	
		//获取当前Announce状态信息的列表
		//Get the status of announces
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetAnnounceData", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Stat_GetAnnounceData( uint hDownloader, IntPtr pData, ref int nRetCount, int nMaxCount );
	
		//获取当前任务的调试信息
		//Get the debug information of downloader
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Stat_GetBTDownloaderInfo", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern string FTK_Stat_GetBTDownloaderInfo( uint hDownloader );

		//////////////////////////////////////////////////////////////////////////
		//打开Torrent文件获取信息的函数列表
		//Torrent file interface

		//判断是不是自己定义的加密的Torrent文件
		//Return boolean, tell us is a cipher torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_IsCipherTorrent", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Torrent_IsCipherTorrent( string sFileName );

		//执行从文件中读取数据并初始化对象操作
		//Open a torrent file handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_Open", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern uint FTK_Torrent_Open( string sFileName, uint nCodePage, string sDesKey, bool bValidEOF, bool bValidSort );

		//执行从文件中读取数据并初始化对象操作, 如果失败, 返回错误信息
		//Open a torrent file handle, if failed, return error information
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_SafeOpen", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Torrent_SafeOpen( string sFileName, uint nCodePage, string sDesKey, bool bValidEOF, bool bValidSort, ref _tagErrInfo pErrInfo );
	
		//判断是不是自己定义的加密的Torrent数据流对象
		//Return boolean, tell us is a cipher torrent binary data
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_IsCipherTorrentObj", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Torrent_IsCipherTorrentObj( [MarshalAs(UnmanagedType.LPArray)] byte[] pData, int nLength );
	
		//执行从Torrent binary object中读取数据并初始化对象操作
		//Open a torrent binary object
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_OpenObj", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Torrent_OpenObj( [MarshalAs(UnmanagedType.LPArray)] byte[] pData, int nLength, uint nCodePage, string sDesKey, bool bValidEOF, bool bValidSort, ref _tagErrInfo pErrInfo );

		//关闭当前打开的Torrent文件
		//Close Torrent file handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_Close", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Torrent_Close( uint hTorrentFile );

		//判断是目录还是文件
		//Return boolean, tell us is only a single file in torrent
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_IsFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Torrent_IsFile( uint hTorrentFile );

		//获取 Torrent 名称
		//Get the name of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetTorrentName", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern string FTK_Torrent_GetTorrentName( uint hTorrentFile );

		//获取torrent中的文件的个数(至少一个)
		//Get total number of files
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetFilesCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern int FTK_Torrent_GetFilesCount( uint hTorrentFile );

		//获取torrent中的文件列表(至少一个)
		//Get a pointer to file list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetFiles", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Torrent_GetFiles( uint hTorrentFile, ref _tagFileInfo pFileInfo );
	
		//获取torrent中的文件列表中的某个文件的信息
		//Get a pointer to a file of file list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetFileInfo", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Torrent_GetFileInfo( uint hTorrentFile, int nIndex, ref _tagFileInfo pFileInfo );
	
		//获取Info的Hash值, 内部使用
		//Get the binary info hash of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetInfoHash", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern byte[] FTK_Torrent_GetInfoHash( uint hTorrentFile );

		//获取info的Hash值, 十六进制
		//Get the hex encoding info hash of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetHexInfoHash", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern string FTK_Torrent_GetHexInfoHash( uint hTorrentFile );

		//获取 main annouce url
		//Get mainb announce url
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetMainAnnounce", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern string FTK_Torrent_GetMainAnnounce( uint hTorrentFile );
	
		//获取 Announce 分组的个数
		//Get the number of all announce list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetAnnouncesCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern int FTK_Torrent_GetAnnouncesCount( uint hTorrentFile );
	
		//获取指定的 Announce 分组包含的Announce的个数
		//Get the size of a announce list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetAnnounceSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern int FTK_Torrent_GetAnnounceSize( uint hTorrentFile, int nGroupIndex );
	
		//获取指定的 Announce 分组中指定位置的Announce
		//Get a annoucne of a announce list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetAnnouncesVal", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern string FTK_Torrent_GetAnnouncesVal( uint hTorrentFile, int nGroupIndex, int nIndex );
	
		//获取 注释
		//Get the comments
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetComments", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern string FTK_Torrent_GetComments( uint hTorrentFile );
	
		//获取 Torrent 创建时间
		//Get the creation time of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetCreateTime", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Torrent_GetCreateTime( uint hTorrentFile );
